--- a/CTWUXClassExercise/Properties/codeTheWaycss.css
+++ b/CTWUXClassExercise/Properties/codeTheWaycss.css
@@ -19,7 +19,7 @@
 
 .button {
     background-color: #557A95;
-    border: none;
+    border: 2px solid #557A95;
     color: white;
     padding: 15px 32px;
     text-align: center;
