--- a/CTWUXClassExercise/Properties/codeTheWaycss.css
+++ b/CTWUXClassExercise/Properties/codeTheWaycss.css
@@ -17,6 +17,17 @@
     font-size: medium;
 }
 
+#summer {
+    width: 100%;
+    padding: 20px 0;
+    text-align: left;
+    background-color: white;
+    margin-top: 5px;
+    font-family: Georgia;
+    color: black;
+    font-size: medium;
+}
+
 .button {
     background-color: #557A95;
     border: 2px solid #557A95;
@@ -37,6 +48,5 @@
         color: #557A95;
         
     }
-
 
 
