--- a/CTWUXClassExercise/Properties/codeTheWaycss.css
+++ b/CTWUXClassExercise/Properties/codeTheWaycss.css
@@ -18,17 +18,27 @@
 }
     .body + .tooltip > .tooltip-inner {
         background-color: #557A95;
-        color: #FFFFFF;
+        border: 2px solid #557A95;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        margin: 4px 2px;
+        cursor: pointer;
+        transition-duration: 0.4s;
+
+
         border: 1px solid #557A95;
         padding: 15px;
-        font-size: 20px;
-        font-family: Georgia;
-        color: #FFFFFF;
-        font-size: small ;
+        font-size: small;
     }
 
     .body + .tooltip.bottom > .tooltip-arrow {
-        border-bottom: 5px solid #557A95;
+        border-bottom: 2px solid #557A95;
+
+        display: inline-block;
+        margin: 4px 2px;
     }
 
 #summer {
