Made the tooltip into javascript - Code the Way

--- a/CTWUXClassExercise/Properties/codeTheWaycss.css
+++ b/CTWUXClassExercise/Properties/codeTheWaycss.css
@@ -19,28 +19,28 @@
     font-size: medium;
 }
 
-    .bodyText + .tooltip > .tooltip-inner {
-        background-color: #557A95;
-        border: 2px solid #557A95;
-        color: white;
-        padding: 15px 32px;
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+    .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 500px;
+        background-color: black;
+        color: #fff;
         text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        margin: 4px 2px;
-        cursor: pointer;
-        transition-duration: 0.4s;
-        border: 1px solid #557A95;
-        padding: 15px;
-        font-size: small;
+        border-radius: 6px;
+        padding: 5px 0;
+        /* Position the tooltip */
+        position: absolute;
+        z-index: 1;
     }
 
-    .bodyText + .tooltip.bottom > .tooltip-arrow {
-        border-bottom: 2px solid #557A95;
-        display: inline-block;
-        margin: 4px 2px;
+    .tooltip:hover .tooltiptext {
+        visibility: visible;
     }
-
 
 .buttonFormatting {
     background-color: #557A95;
